updated about section

--- a/folder/MyResume/MyResume/assets/css/style.css
+++ b/folder/MyResume/MyResume/assets/css/style.css
@@ -351,6 +351,10 @@ section {
   margin-bottom: 0;
 }
 
+.col-lg-6{
+  margin-right: 5px;
+}
+
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
