--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1005,6 +1005,16 @@ section {
   }
 }
 
+.formButton {
+  background: #0563bb;
+    border: 0;
+    padding: 10px 35px;
+    margin: 20px;
+    color: #fff;
+    transition: 0.4s;
+    border-radius: 50px;
+}
+
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
